--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,14 @@
 	</repositories>
 	
 	<dependencies>
-		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.3.2-R0.1</version>
-			<scope>runtime</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.bukkit</groupId>
+      <artifactId>bukkit</artifactId>
+      <!-- Bukkit API Version, change if out dated -->
+      <version>1.3.2-R1.0</version>
+      <type>jar</type>
+      <scope>provided</scope>
+    </dependency>
 		
 		<dependency>
 			<groupId>junit</groupId>
